fixed recenter button not appearing on mobile

--- a/src/styles/partials/_map.scss
+++ b/src/styles/partials/_map.scss
@@ -13,7 +13,7 @@
 
 
   @media only screen and (max-width: 640px) {
-    div.leaflet-bottom.leaflet-right {
+    div.leaflet-control-zoom {
       display: none !important;
     }
   }
